--- a/Simu/SimuAPP/CMakeLists.txt
+++ b/Simu/SimuAPP/CMakeLists.txt
@@ -2,8 +2,8 @@
 find_package(raylib)
 
 # Sources
-file(GLOB CPP_SOURCES "**.cpp" "**.cc")
-file(GLOB HPP_SOURCES "**.hpp" "**.h")
+file(GLOB CPP_SOURCES "*/**.cpp" "*/**.cc")
+file(GLOB HPP_SOURCES "*/**.hpp" "*/**.h")
 
 add_executable("Program" ${CPP_SOURCES} ${HPP_SOURCES})
 target_link_libraries("Program" Core raylib)
