Add CollisionListener and core Exceptions

--- a/Simu/SimuAPP/CMakeLists.txt
+++ b/Simu/SimuAPP/CMakeLists.txt
@@ -1,12 +1,14 @@
 # Find packages
 find_package(raylib)
+find_package(box2d)
+
 
 # Sources
 file(GLOB CPP_SOURCES "*/**.cpp" "*/**.cc")
 file(GLOB HPP_SOURCES "*/**.hpp" "*/**.h")
 
 add_executable("Program" ${CPP_SOURCES} ${HPP_SOURCES})
-target_link_libraries("Program" Core raylib)
+target_link_libraries("Program" Core raylib box2d::box2d)
 
 install(TARGETS 
   "Program"
